升级规则引擎并统一 UI 树